--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb://Api:gap14br09@cluster0-shard-00-00.qsxa7.mongodb.net:27017,cluster0-shard-00-01.qsxa7.mongodb.net:27017,cluster0-shard-00-02.qsxa7.mongodb.net:27017/Cluster0?ssl=true&replicaSet=atlas-2y6wsd-shard-0&authSource=admin&retryWrites=true&w=majority",
+  "ConnectionString": "mongodb://Api:ahsysgsvasa53@cluster0-shard-00-00.qsxa7.mongodb.net:27017,cluster0-shard-00-01.qsxa7.mongodb.net:27017,cluster0-shard-00-02.qsxa7.mongodb.net:27017/Cluster0?ssl=true&replicaSet=atlas-2y6wsd-shard-0&authSource=admin&retryWrites=true&w=majority",
   "NomeBanco": "coronavirus"
 }
